<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Ha Duy Trung
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_sort"
        android:title="@string/pref_search_sort_title"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@id/menu_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@id/menu_sort_recent"
                    android:title="@string/search_sort_recent" />
                <item
                    android:id="@id/menu_sort_popular"
                    android:title="@string/search_sort_popularity" />
            </group>
        </menu>
    </item>
    <item
        android:id="@id/menu_date"
        android:title="@string/search_date_title"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@id/menu_date_group"
                android:checkableBehavior="single">
                <item
                    android:id="@id/menu_date_any"
                    android:title="@string/search_date_any" />
                <item
                    android:id="@id/menu_date_24h"
                    android:title="@string/search_date_24h" />
                <item
                    android:id="@id/menu_date_week"
                    android:title="@string/search_date_week" />
                <item
                    android:id="@id/menu_date_month"
                    android:title="@string/search_date_month" />
                <item
                    android:id="@id/menu_date_year"
                    android:title="@string/search_date_year" />
            </group>
        </menu>
    </item>
</menu>